--- a/src/styles/_devices.scss
+++ b/src/styles/_devices.scss
@@ -67,11 +67,28 @@
     .product .buy_btn {transform: translate(50%, 351px);}
     .gallery img {width: 179px;}
     .contact {grid-template-columns: 7% 90%;}
+
     }
     
-
+    @media only screen and (max-width: 390px) and (min-width: 679px) {
+        .fixedBackground {display: inherit;}
+        .fixedBackground2 {display: inherit;}
+    }
 
 // iPhone X Portrait Safari
 @media only screen and (max-width: 390px) and (min-width: 350px) and (max-height: 650px) and (min-height: 600px) {
-    
+    .backgroundvideo {left: -138%;width: 386vw;}
+    .backgroundOverlay h1 {font-size: 40px;}
+    .overlay_text {transform: translateY(307px);}
+    .middle_btn {top: 428px;}
+    .fixedBackground {display: none;}
+    .fixedBackground2 {display: none;}
+    .product h1 {font-size: 25px;font-size: 25px;text-align: center; transform: translateY(43px);}
+    .product {display: block;height: 595px;}
+    .product p {text-align: center;transform: translateY(43px);}
+    .product img {transform: translateY(12px);}
+    .product .buy_btn {transform: translate(50%, 351px);}
+    .gallery img {width: 179px;}
+    .contact {grid-template-columns: 7% 90%;}
+    .static_background1 {width: 100%;}
 }
